--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </p>
       </div>
 
-      <img class="col-wide" src="./img/wolf3.jpg" alt="Lobo 3">
+      <img class="col-wide imagem-3" src="./img/wolf3.jpg" alt="Lobo 3">
     </main>
 
     <!--INICIO NAVEGAÇÃO LATERAL DIREITA-->
